@startuml
entity users {
  *id: int
  --
  *name: varchar
  *email: varchar
  *role: enum
  commune_id: fk
}

entity documents {
  *id: int
  --
  *type: enum
  *status: enum
  user_id: fk
  commune_id: fk
  agent_id: fk
}

entity communes {
  *id: int
  --
  *code: varchar
  *name: varchar
}

users }|--|| communes
documents }o--|| users
documents }o--|| communes
@enduml
